# calculating-pi

./: README.md  configuration.nix  main.py  pyproject.toml
src/: Pi.java  pi-ts.js  pi.c  pi.cc  pi.cs  pi.f90  pi.jl  pi.js  pi.lua  pi.m  pi.pl  pi.py  pi.r  pi.rb  pi.rs  pi.ts
src/output/: java_out.txt
